<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/appToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="@string/app_name" />

    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="monospace"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/loginTextView"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/username"
        />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="wrap_content"
        android:layout_below="@id/usernameEditText"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <LinearLayout
        android:id="@+id/logButtonLayout"
        android:layout_width="wrap_content"
        android:layout_below="@id/passwordEditText"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/loginButton"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:onClick="onLoginClick"
            android:layout_height="wrap_content"
            android:text="@string/login" />

        <Button
            android:id="@+id/signupButton"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:onClick="onSignupClick"
            android:layout_height="wrap_content"
            android:text="@string/signup" />
    </LinearLayout>

    <TextView
        android:id="@+id/logResultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logButtonLayout"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:text=""
        android:textColor="#FF0000" />

</RelativeLayout>
